<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/bg_white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/articlePict"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_white"
        android:contentDescription="@string/articlePicture"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_place_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle" />

    <TextView
        android:id="@+id/tvArticleTitle"
        style="@style/sansSerifMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="2"
        android:text="@string/articleTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/articlePict"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvArticlePublisher"
        style="@style/sansSerif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/articlePublisher"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvArticleAuthor"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleAuthor" />

    <TextView
        android:id="@+id/tvArticleAuthor"
        style="@style/sansSerifCondensedMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/articleAuthor"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/tvArticleTitle"
        app:layout_constraintTop_toBottomOf="@+id/articlePict" />

    <TextView
        android:id="@+id/tvArticleDesc"
        style="@style/sansSerifMedium"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:maxLines="6"
        android:text="@string/description"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/articlePict"
        app:layout_constraintEnd_toEndOf="@+id/tvArticleTitle"
        app:layout_constraintStart_toEndOf="@+id/articlePict"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle" />

    <ImageButton
        android:id="@+id/ibReadMore"
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_pink"
        android:contentDescription="@string/readMore_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvArticleTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvArticleAuthor"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleDesc" />

    <TextView
        android:id="@+id/textView6"
        style="@style/sansSerifMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/readMore"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ibReadMore"
        app:layout_constraintEnd_toEndOf="@+id/ibReadMore"
        app:layout_constraintStart_toStartOf="@+id/ibReadMore"
        app:layout_constraintTop_toTopOf="@+id/ibReadMore" />


</androidx.constraintlayout.widget.ConstraintLayout>